--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,8 @@
 
     <groupId>me.Fupery</groupId>
     <artifactId>InventoryGames</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <description>Simple Inventory-Based Minigames</description>
-
-
     <build>
         <finalName>${project.name}</finalName>
         <resources>
@@ -40,7 +38,7 @@
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
+            <artifactId>spigot-api</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
