--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.Fupery</groupId>
     <artifactId>InventoryGames</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <description>Simple Inventory-Based Minigames</description>
     <build>
         <finalName>${project.name}</finalName>
@@ -27,6 +27,32 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <minimizeJar>false</minimizeJar>
+                            <relocations>
+                            </relocations>
+                            <artifactSet>
+                                <includes>
+                                    <include>me.Fupery:InventoryMenu:*</include>
+                                </includes>
+                                <excludes>
+                                    <exclude>org.spigotmc:*</exclude>
+                                </excludes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <repositories>
@@ -41,6 +67,12 @@
             <artifactId>spigot-api</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.Fupery</groupId>
+            <artifactId>InventoryMenu</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
